# ricer

./: .gitattributes  .gitignore  .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.lock.license  Cargo.toml  README.md  SECURITY.md  build.rs  cliff.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yaml  quality.yaml  quality_check.yaml  reuse.yaml
LICENSES/: CC-BY-SA-4.0.txt  MIT.txt
crates/ricer_test_tools/: Cargo.toml
crates/ricer_test_tools/src/: fakes.rs  fixtures.rs  lib.rs  stubs.rs  util.rs
crates/ricer_test_tools/src/fakes/: config_dir.rs  data_dir.rs
crates/ricer_test_tools/src/fixtures/: dotfile.rs  git.rs
crates/ricer_tester/: Cargo.toml
src/: cli.rs  config.rs  context.rs  data_xchg.rs  error.rs  hook.rs  lib.rs  locate.rs  main.rs  manager.rs  ricer.rs  test_tools.rs  testenv.rs  tests.rs  ui.rs  vcs.rs  wizard.rs
src/cli/: options.rs
src/config/: dir.rs  entry.rs  file.rs  hook.rs  locator.rs  parser.rs  repo.rs  repository.rs  settings.rs  toml.rs
src/config/dir/: tests.rs
src/config/file/: hooks_section.rs  repos_section.rs
src/config/locator/: layout.rs  tests.rs
src/context/: clone.rs  commit.rs  delete.rs  enter.rs  git_on_repo.rs  init.rs  list.rs  pull.rs  push.rs  rename.rs  repo_git.rs  status.rs
src/data_xchg/: cmd_hook.rs  error.rs  repo.rs
src/locate/: error.rs  layout.rs
src/manager/: error.rs  locator.rs  toml.rs
src/manager/locator/: layout.rs
src/tests/: cli.rs  cmd_hook_entry.rs  config.rs  context.rs  data_xchg.rs  default_cfg_dir_locator.rs  default_cfg_dir_mgr.rs  default_cfg_file_mgr.rs  default_cmd_hook_mgr.rs  dir.rs  file.rs  hook.rs  hooks_section.rs  locator.rs  manager.rs  repo_entry.rs  repos_section.rs  ui.rs
src/tests/config/: cmd_hook.rs  cmd_hook_config.rs  cmd_hook_entry.rs  config_file.rs  hook.rs  repo.rs  repo_config.rs  repo_entry.rs  repository.rs  toml.rs  toml_parser.rs
src/tests/data_xchg/: cmd_hook.rs  repo.rs
src/ui/: error.rs
src/wizard/: error.rs
tests/: integration_tests.rs  tools.rs
tests/config/: config.rs  mod.rs
tests/integration/: config_file.rs  config_manager.rs  default_command_hook_manager.rs  main.rs
tests/tools/: Cargo.toml  fakes.rs  mod.rs  stubs.rs
tests/tools/src/: fakes.rs  lib.rs  stubs.rs
