# SPDX-FileCopyrightText: 2024 Jason Pena <jasonpena@awkless.com>
# SPDX-License-Identifier: MIT

[package]
name = "ricer"
description = "Experimental dotfile manager that allows to treat your home directory like a Git repository"
keywords = ["dotfile-manager", "ricing", "cli-tool"]
categories = ["command-line-utilities"]
repository = "https://github.com/rice-configs/ricer"
readme = "README.md"
authors = ["Jason Pena <jasonpena@awkless.com>"]
edition = "2021"
license = "MIT"
version = "0.1.0"
rust-version = "1.77.2"

[[bin]]
name = "ricer"
test = false
doc = false

[dependencies]
anyhow = "~1.0.0"
clap = { version = "~4.5.0", features = ["derive"] }
clap-verbosity-flag = "~2.2.0"
env_logger = "~0.11.0"
indoc = "~2.0.0"
git2 = "~0.19.0"
log = "~0.4.0"
minus = { version = "~5.6.0", features = [ "static_output", "search" ] }
run_script = "~0.10.0"
toml_edit = "~0.22.0"

[dev-dependencies]
pretty_assertions = "~1.4.0"
mockall = "~0.13.0"
