# SPDX-FileCopyrightText: 2024 Jason Pena <jasonpena@awkless.com>
# SPDX-License-Identifier: GPL-2.0-or-later WITH GPL-CC-1.0

[package]
name = "ricer_test_tools"
description = "Testing tools for Ricer"
authors = ["Jason Pena <jasonpena@awkless.com>"]
version = "0.3.0"
edition = "2021"
rust-version = "1.74.1"
license = "GPL-2.0-or-later WITH GPL-CC-1.0"

[dependencies]
anyhow.workspace = true
git2.workspace = true
is_executable.workspace = true
pretty_assertions.workspace = true
mkdirp.workspace = true
tempfile = "3.10"
